@@ -62,7 +62,7 @@ names are mapped to languages according to the following default mappings
 .RS 4
 .TP 9
 .B Assembler
-*.asm *.ASM *.s *.S
+*.asm *.ASM *.[sS] *.A51 *.29[kK] *.[68][68][kKsSxX] *.[xX][68][68]
 .TP 9
 .B ASP
 *.asp *.asa
